# aichallenge2023-racing

./: .gitattributes  .gitignore  .gitmodules  README.html  README.md  index.html  manifest.json  toc.html  toc.json
FAQ/: index.html
aichallenge/: build_autoware.sh  clean_build.sh  run_autoware.sh  run_awsim.sh
aichallenge/aichallenge_ws/src/aichallenge_submit/aichallenge_submit_launch/launch/: autoware_micro_awsim.launch.xml
aichallenge/aichallenge_ws/src/aichallenge_submit/aichallenge_submit_launch/map/: lanelet2_map.osm  pointcloud_map.pcd
aichallenge/aichallenge_ws/src/aichallenge_submit/autoware_micro/odom2tf/: package.xml
aichallenge/aichallenge_ws/src/aichallenge_submit/autoware_micro/path_to_trajectory/: package.xml
aichallenge/aichallenge_ws/src/aichallenge_submit/autoware_micro/simple_pure_pursuit/: package.xml
aichallenge/aichallenge_ws/src/aichallenge_submit/dallara_interface/: .cspell.json
aichallenge/aichallenge_ws/src/aichallenge_submit/dallara_interface/dallara_interface/: README.md  package.xml
aichallenge/aichallenge_ws/src/aichallenge_submit/dallara_interface/dallara_interface/launch/: dallara_interface.launch.xml
aichallenge/aichallenge_ws/src/aichallenge_submit/dallara_interface/dallara_interface/src/: dallara_interface.cpp
aichallenge/aichallenge_ws/src/aichallenge_submit/dallara_interface/dallara_launch/: README.md
aichallenge/autoware/src/aichallenge_submit/aichallenge_submit_launch/: CMakeLists.txt
aichallenge/autoware/src/aichallenge_system/aichallenge_launch/: CMakeLists.txt
aichallenge/autoware/src/sim-msgs/autonoma_msgs/: CMakeLists.txt
aichallenge/autoware/src/sim-msgs/autonoma_msgs/msg/: GroundTruthArray.msg
customize/: index.html
docker-develop/: Dockerfile  build_docker.sh  run_container.sh  run_container_cpu.sh
docker-evaluation/: Dockerfile  advance_preparations.sh  build_docker.sh  main.bash  run_container.sh  run_container_cpu.sh
docker/aichallenge/: build_autoware.sh  clean_build.sh  run_autoware.sh  run_awsim.sh
docker/aichallenge/aichallenge_ws/src/aichallenge_launch/config/: autoware.rviz
docker/aichallenge/aichallenge_ws/src/aichallenge_launch/launch/: aichallenge.launch.xml
docker/aichallenge/aichallenge_ws/src/aichallenge_scoring/: README.md  package.xml
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/autoware_micro/my_control/: package.xml  setup.cfg  setup.py
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/autoware_micro/my_control/my_control/: control.py
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/autoware_micro/path_to_trajectory/: CMakeLists.txt
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/autoware_micro/path_to_trajectory/include/path_to_trajectory/: csv_to_trajectory.hpp
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/autoware_micro/path_to_trajectory/src/: csv_to_trajectory.cpp  path_to_trajectory.cpp
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/autoware_micro/simple_pure_pursuit/: CMakeLists.txt
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/autoware_micro/simple_pure_pursuit/include/simple_pure_pursuit/: simple_pure_pursuit.hpp
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/autoware_micro/simple_pure_pursuit/src/: simple_pure_pursuit.cpp
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/sim-msgs/can_msgs/: CMakeLists.txt
docker/aichallenge/aichallenge_ws/src/dallara_interface/: README.md  build_depends.repos
docker/aichallenge/aichallenge_ws/src/dallara_interface/awsim_adapter/odom2tf/: CMakeLists.txt  Readme.md
docker/aichallenge/aichallenge_ws/src/dallara_interface/awsim_adapter/odom2tf/launch/: awsim_odom2tf.launch.xml
docker/aichallenge/aichallenge_ws/src/dallara_interface/awsim_adapter/odom2tf/src/odom2tf/: odom2tf.cpp
docker/aichallenge/aichallenge_ws/src/dallara_interface/dallara_interface/: CMakeLists.txt
docker/aichallenge/aichallenge_ws/src/dallara_interface/dallara_interface/include/: dallara_interface.hpp
docker/aichallenge/aichallenge_ws/src/dallara_interface/dallara_launch/dallara_description/: CMakeLists.txt  package.xml
docker/aichallenge/aichallenge_ws/src/dallara_interface/dallara_launch/dallara_launch/: CMakeLists.txt  package.xml
docker/aichallenge/aichallenge_ws/src/dallara_interface/dallara_launch/dallara_launch/launch/: test_awsim_.launch.xml  test_racing_vehicle.launch.xml
docker/evaluation/: Dockerfile  advance_preparations.sh  build_docker.sh  main.bash  run_container.sh  run_container_cpu.sh
docker/train/: Dockerfile  run_container.sh  run_container_cpu.sh
documentation/: README.md
documentation/docfx_project/: README.md  docfx.json  index.md  toc.yml
documentation/docfx_project/FAQ/: index.md
documentation/docfx_project/customize/: index.md
documentation/docfx_project/intro/: index.md  toc.yml
documentation/docfx_project/local/: index.md
documentation/docfx_project/online/: index.md
documentation/docfx_project/rule/: index.md  toc.yml
documentation/docfx_project/setup/: index.md
documentation/docfx_project/teams/: index.md
documentation/docfx_project_en/: docfx.json  index.md  toc.yml
documentation/docfx_project_en/FAQ/: index.md
documentation/docfx_project_en/customize/: index.md
documentation/docfx_project_en/intro/: index.md  toc.yml
documentation/docfx_project_en/local/: index.md
documentation/docfx_project_en/online/: index.md
documentation/docfx_project_en/rule/: index.md  toc.yml
documentation/docfx_project_en/setup/: index.md
en/: README.html  index.html  manifest.json  toc.html  toc.json
en/FAQ/: index.html
en/customize/: index.html
en/intro/: index.html  toc.html  toc.json
en/local/: index.html
en/online/: index.html
en/other/: index.html
en/rule/: index.html  toc.html  toc.json
en/setup/: index.html
en/teams/: index.html
finals/: index.html  operation.html  rules.html
intro/: index.html  toc.html  toc.json
local/: index.html
online/: index.html
other/: index.html
rule/: index.html  toc.html  toc.json
setup/: index.html
teams/: index.html
(+67 files in other folders)
