<?xml version="1.0"?>
<package format="2">
  <name>odom2tf</name>
  <version>0.1.0</version>
  <maintainer email="taiki.tanaka@tier4.jp">taiki.tanaka</maintainer>
  <description>The odom2tf package</description>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
