<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_pure_pursuit</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yhisaki31@gmail.com">hisaki</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>autoware_auto_control_msgs</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>motion_utils</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>