<?xml version="1.0"?>
<package format="2">
  <name>dallara_interface</name>
  <version>0.1.0</version>
  <maintainer email="yu.asabe@tier4.jp">Yu Asabe</maintainer>
  <description>The Dallara Interface package for Racing</description>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tier4_vehicle_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>autonoma_msgs</depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
