<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ky.37f.9850@s.thers.ac.jp">arata-22</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <depend>rclpy</depend> <!-- rclcppからrclpyへ変更 -->
  <depend>autoware_auto_control_msgs</depend>
  <depend>autonoma_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
