<?xml version="1.0"?>
<package format="2">
  <name>dallara_description</name>
  <version>0.1.0</version>
  <description>The dallara_description package</description>

  <maintainer email="taiki.tanaka@tier4.jp">Taiki Tanaka</maintainer>
  <license>Apache2</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
