<?xml version="1.0"?>
<package format="2">
  <name>dallara_launch</name>
  <version>0.1.0</version>
  <description>The dallara_launch package</description>

  <maintainer email="taiki.tanaka@tier4.jp">Taiki Tanaka</maintainer>
  <maintainer email="yu.asabe@tier4.jp">Yu Asabe</maintainer>
  <license>Apache2</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <!--exec_depend>individual_params</exec_depend-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
